# jira-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: index.html
src/jira_mcp/: __main__.py  client.py  config.py  server.py  tools.py
