[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-mcp"
version = "1.0.0"
description = "MCP server for Jira Cloud"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0",
]
keywords = ["mcp", "jira", "atlassian", "issue-tracking", "model-context-protocol", "claude", "ai"]

[project.scripts]
jira-mcp = "jira_mcp:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
